--- a/a2c.conf
+++ b/a2c.conf
@@ -14,7 +14,7 @@ max-overall-upload-limit=1K
 max-concurrent-downloads=10
 summary-interval=0
 peer-id-prefix=-qB4420-
-user-agent=Wget/1.12
+user-agent=netdisk:ancode-top
 peer-agent=qBittorrent/4.4.2
 bt-enable-lpd=true
 seed-time=0
